fix: breadcrumb component

--- a/lib/components/Link/link.scss
+++ b/lib/components/Link/link.scss
@@ -19,7 +19,7 @@
 
     color: var(--component-textIcon-normal-prominent);
 
-    &:hover {
+    &--hover {
         text-decoration: var(--core-fontDecoration-underline);
     }
 
