fix: hide input type number spin buttons in firefox and other browsers

--- a/lib/components/Input/base/base.scss
+++ b/lib/components/Input/base/base.scss
@@ -7,9 +7,14 @@
         flex-direction: column;
         gap: var(--component-field-spacing-gap-xs);
 
-        input[type="number"]::-webkit-inner-spin-button,
-        input[type="number"]::-webkit-outer-spin-button {
+        input[type="number"]::-webkit-outer-spin-button,
+        input[type="number"]::-webkit-inner-spin-button {
             -webkit-appearance: none;
+            margin: 0;
+        }
+        input[type="number"] {
+            -moz-appearance: textfield;
+            -ms-appearance: textfield;
         }
 
         .message__container {
