chore: initial quill vault fix

--- a/lib/components/Atom/Calendar/date-picker.scss
+++ b/lib/components/Atom/Calendar/date-picker.scss
@@ -170,6 +170,10 @@
                 color: var(--component-dropdownItem-label-color-default);
                 position: relative;
 
+                &:disabled {
+
+                }
+
                 &.react-calendar__tile--hover,
                 &:enabled:hover,
                 &:enabled:focus {
