fix: datepicker disabled tile style update

--- a/lib/components/Atom/Calendar/date-picker.scss
+++ b/lib/components/Atom/Calendar/date-picker.scss
@@ -144,6 +144,10 @@
                     --semantic-color-monochrome-surface-normal-low
                 );
             }
+            &:disabled {
+                background-color: unset;
+                color: var(--component-dropdownItem-label-color-disabled);
+            }
 
             &--range {
                 border-radius: unset;
