chore: add test case and fix ui issue

--- a/lib/components/Button/dropdown/dropdown.scss
+++ b/lib/components/Button/dropdown/dropdown.scss
@@ -35,4 +35,8 @@
             background-color: var(--component-dropdownItem-bg-active);
         }
     }
+
+    &__content {
+        min-width: 360px;
+    }
 }
