--- a/lib/components/Input/custom-dropdown/custom-dropdown.scss
+++ b/lib/components/Input/custom-dropdown/custom-dropdown.scss
@@ -15,7 +15,7 @@
         position: absolute;
         top: 100%;
         z-index: 100;
-        min-width: 360px;
+        width: 100%;
 
         &-align {
             &--left {
