Jia/QUILL-1766/dropdown-button-fixes (#358)
* fix: dropdown button behaviour

* chore: udpate dropdown button

* chore: update component

* chore: update

* chore: add test case and fix ui issue

* chore: cleanup code

--- a/lib/components/Input/custom-dropdown/custom-dropdown.scss
+++ b/lib/components/Input/custom-dropdown/custom-dropdown.scss
@@ -1,13 +1,7 @@
 .quill-custom-dropdown {
-    &__is-open {
-        &--true {
-            z-index: 100;
-        }
-    }
-
     &__container {
         position: relative;
-        max-width: 360px;
+        display: inline-block;
     }
 
     &__input {
@@ -19,10 +13,20 @@
 
     &__content {
         position: absolute;
+        top: 100%;
+        z-index: 100;
         width: 100%;
 
-        &--container {
-            position: relative;
+        &-align {
+            &--left {
+                left: 0;
+                right: auto;
+            }
+
+            &--right {
+                right: 0;
+                left: auto;
+            }
         }
     }
 }
