build: fixed css issue for responsive

--- a/lib/components/Breadcrumbs/base/breadcrumbs.scss
+++ b/lib/components/Breadcrumbs/base/breadcrumbs.scss
@@ -7,10 +7,10 @@
 
     &--dropdown {
         position: relative;
-        right: -600px;
-        margin-left: -1200px;
-        width: 1300px;
-        opacity: var(--core-opacity-700);
+        right: -12px;
+        margin-left: -24px;
+        width: 26px;
+        opacity: 0;
 
     }
     &--item {
