--- a/lib/components/Breadcrumbs/base/breadcrumbs.scss
+++ b/lib/components/Breadcrumbs/base/breadcrumbs.scss
@@ -1,15 +1,23 @@
+@import "@deriv-com/quill-tokens/dist/breakpoints.scss";
+
 .quill-breadcrumb {
     &--container {
         display: flex;
-        overflow-x: auto;
-        gap: var(--component-breadcrumb-spacing-gap-md);
+        overflow: visible;
+        gap: var(--component-breadcrumb-spacing-gap-sm);
+        align-items: center;
+
+
+        @include breakpoint("md") {
+            gap: var(--component-breadcrumb-spacing-gap-md);
+        }
     }
 
     &--dropdown {
         position: relative;
-        right: -12px;
-        margin-left: -24px;
-        width: 26px;
+        right: -18px;
+        margin-left: -18px;
+        width: 14px;
         opacity: 0;
 
     }
@@ -17,5 +25,19 @@
         display: flex;
         align-items: center;
         white-space: nowrap;
+        text-decoration: none;
+        color: var(--component-textIcon-normal-prominent);
+
+        &--disabled {
+            pointer-events: none;
+            opacity: var(--opacity-disabled);
+        }
+        &:active {
+            text-decoration: var(--core-fontDecoration-underline);
+        }
+    }
+    &--chevron {
+        display: none;
+        
     }
 }
