fix: input phone number completed

--- a/lib/components/Input/input-phone-number/input-phone-number.scss
+++ b/lib/components/Input/input-phone-number/input-phone-number.scss
@@ -56,6 +56,11 @@
     position: relative;
 }
 
+.quill-phone-input-addon {
+    display: flex;
+    height: 100%;
+}
+
 .quill-custom-dropdown__container {
     &:has(.quill-country-code) {
         display: flex;
