chore: completed colors

--- a/lib/components/Snackbar/snackbar.scss
+++ b/lib/components/Snackbar/snackbar.scss
@@ -13,7 +13,7 @@
     border-radius: var(--component-snackbar-border-radius);
     border: var(--component-snackbar-border-width) solid
         var(--component-snackbar-border-color);
-    background: var(--component-snackbar-bg);
+    background: var(--component-snackbar-bg-neutral);
     box-shadow: var(--core-elevation-shadow-330);
     position: fixed;
     z-index: 999;
