--- a/src/vault/assets/styles/main.scss
+++ b/src/vault/assets/styles/main.scss
@@ -1,36 +1,42 @@
 // Ultra-thin, semi-transparent scrollbars
 * {
     &::-webkit-scrollbar {
-      width: 0;
-      height: 0;
+        width: 0;
+        height: 0;
     }
-  
+
     &:hover {
-      &::-webkit-scrollbar {
-        width: 2px;
-        height: 2px;
-      }
-  
-      &::-webkit-scrollbar-thumb {
-        background-color: rgba(0, 0, 0, 0.1);
-        border-radius: 10px;
-      }
-  
-      &::-webkit-scrollbar-track {
-        background-color: transparent;
-      }
-  
-      &::-webkit-scrollbar-thumb:hover {
-        background-color: rgba(0, 0, 0, 0.1);
-      }
-  
-      &::-webkit-scrollbar-thumb:active {
-        background-color: rgba(0, 0, 0, 0.1);
-      }
+        &::-webkit-scrollbar {
+            width: 2px;
+            height: 2px;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background-color: rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+        }
+
+        &::-webkit-scrollbar-track {
+            background-color: transparent;
+        }
+
+        &::-webkit-scrollbar-thumb:hover {
+            background-color: rgba(0, 0, 0, 0.1);
+        }
+
+        &::-webkit-scrollbar-thumb:active {
+            background-color: rgba(0, 0, 0, 0.1);
+        }
     }
-  }
-  
-  
+}
+
+.no-select {
+    user-select: none; // Standard syntax
+    -webkit-user-select: none; // For WebKit browsers (Safari, Chrome)
+    -moz-user-select: none; // For Firefox
+    -ms-user-select: none; // For Internet Explorer/Edge
+}
+
 
 .constrained-container {
     width: 100%;
@@ -59,7 +65,7 @@
     &-header {
         display: flex;
         padding: var(--core-spacing-400);
-        background-color: var(--core-color-solid-slate-50);
+        background-color: var(--semantic-color-slate-solid-surface-frame-low);
         position: sticky;
         top: 0;
         z-index: 2;
@@ -300,6 +306,29 @@
                 gap: var(--core-spacing-600);
                 margin-bottom: var(--core-spacing-800);
 
+                .section-caption {
+                    margin: var(--core-spacing-600) 0 0 0;
+                    display: flex;
+                    padding: var(--core-spacing-600) 0 0 0;
+                    width: 100%;
+                    border-top: solid 3px var(--component-textIcon-normal-prominent);
+                }
+
+                .text-image-container {
+
+                    .text-image {
+                        flex: none;
+                        width: 100%;
+                        max-width: 200px;
+                        float: left;
+                        margin: 0 var(--core-spacing-400) var(--core-spacing-400) 0;
+                    }
+
+                    p {
+                        margin-bottom: var(--core-spacing-400);
+                    }
+                }
+
                 ul {
                     display: flex;
                     flex-direction: column;
@@ -326,8 +355,82 @@
                 border-radius: var(--core-borderRadius-200);
                 background: var(--semantic-color-monochrome-surface-normal-lowest);
                 color: var(--semantic-color-red-solid-textIcon-static-high);
-                // color: var(--semantic-color-slate-solid-surface-normal-midHigh);
             }
         }
     }
+}
+
+.token-table-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 700px;
+    height: fit-content;
+
+    @extend .no-select;
+
+    .token-list {
+        &:first-child {
+            border-top: solid 1px var(--semantic-color-slate-solid-surface-normal-midLow);
+        }
+
+        display: flex;
+        height: 40px;
+        gap: var(--core-spacing-1200);
+        border-bottom: solid 1px var(--semantic-color-slate-solid-surface-normal-midLow);
+        align-items: center;
+
+       
+
+        .color-bar {
+            width: 70px;
+            height: 100%;
+
+            &.darker {
+                background-color: var(--semantic-color-slate-solid-surface-normal-low) !important;
+            }
+        }
+
+        .token-variable {
+            font-family: var(--core-fontFamily-ibmPlex-mono);
+            font-size: 12px;
+            width: 100%;
+            max-width: 220px;
+            cursor: pointer;
+
+        }
+
+        .token-tag {
+            display: flex;
+            width: fit-content;
+            height: fit-content;
+            padding: var(--core-spacing-200);
+            font-size: 10px;
+            font-family: var(--core-fontFamily-ibmPlex-mono);
+            background: var(--semantic-color-monochrome-surface-normal-lowest);
+            color: var(--semantic-color-slate-solid-surface-normal-midHigh);
+        }
+
+        .token-group {
+            display: flex;
+            width: fit-content;
+            height: 100%;
+            gap: var(--core-spacing-200);
+            align-items: center;
+            cursor: pointer;
+        }
+    }
+}
+
+
+
+div#react-tiny-popover-container {
+    z-index: 99;
+    max-width: 300px;
+}
+
+.snackbar-container {
+    display: flex;
+    width: 100%;
+    justify-content: center;
 }
