fix: fix the delay of the value to be selected

--- a/lib/components/Atom/WheelPicker/base/wheel-picker-base.scss
+++ b/lib/components/Atom/WheelPicker/base/wheel-picker-base.scss
@@ -96,7 +96,7 @@
         width: 100%;
         scroll-snap-align: center;
         &:hover {
-            background: none;
+            background: none !important;
         }
     }
 }
